# Power-Meter

./: README.md  ina226(1).c  ina226.h  main.c  powermeter-web.html  prometer.py  pwermeter-webide.html
MCU/: main.c
QT/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  oscilloscope.cpp  oscilloscope.h  serialworker.cpp  serialworker.h
